[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconflow"
version = "0.1.0"
description = "CLI reconnaissance orchestration skeleton for authorized testing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ReconFlow" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.4",
  "jinja2>=3.1.4",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2"
]

[project.scripts]
reconflow = "reconflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reconflow*"]
exclude = ["scans*", "reports*", "docs*", "tests*", ".vscode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
